tests/snapshots/snapshots__pipeline@option.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/option.pr
---
== tokens ==
VOpen Type UIdent("Option") LParen Ident("a") RParen Eq UIdent("None") Bar UIdent("Some") LParen Ident("a") RParen VSemi Fn Ident("get") LParen Ident("d") Comma Ident("o") RParen Eq VOpen Match Ident("o") Of VOpen UIdent("None") FatArrow Ident("d") VSemi UIdent("Some") LParen Ident("x") RParen FatArrow Ident("x") VClose VClose VSemi Fn Ident("main") LParen RParen Eq Ident("println") LParen Ident("get") LParen Int(IntLit { value: 0, suffix: None }) Comma UIdent("Some") LParen Int(IntLit { value: 42, suffix: None }) RParen RParen RParen VClose

== ast ==
Program {
    types: [
        DataDecl {
            name: "Option",
            params: [
                "a",
            ],
            param_kinds: [
                Type,
            ],
            ctors: [
                Ctor {
                    name: "None",
                    args: [],
                    fields: None,
                    span: 17..21,
                },
                Ctor {
                    name: "Some",
                    args: [
                        Var(
                            "a",
                        ),
                    ],
                    fields: None,
                    span: 24..28,
                },
            ],
            deriving: [],
            newtype: false,
            span: 0..31,
        },
    ],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "get",
            params: [
                Param {
                    name: "d",
                    ty: None,
                    borrow: false,
                    default: None,
                },
                Param {
                    name: "o",
                    ty: None,
                    borrow: false,
                    default: None,
                },
            ],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Match(
                    Spanned {
                        node: Var(
                            "o",
                        ),
                        span: 56..57,
                    },
                    [
                        Arm {
                            pat: Spanned {
                                node: Ctor(
                                    "None",
                                    [],
                                ),
                                span: 65..69,
                            },
                            body: Spanned {
                                node: Var(
                                    "d",
                                ),
                                span: 73..74,
                            },
                        },
                        Arm {
                            pat: Spanned {
                                node: Ctor(
                                    "Some",
                                    [
                                        Spanned {
                                            node: Var(
                                                "x",
                                            ),
                                            span: 84..85,
                                        },
                                    ],
                                ),
                                span: 79..86,
                            },
                            body: Spanned {
                                node: Var(
                                    "x",
                                ),
                                span: 90..91,
                            },
                        },
                    ],
                ),
                span: 50..91,
            },
            wheres: [],
            span: 33..91,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "println",
                        ),
                        span: 105..112,
                    },
                    [
                        Spanned {
                            node: Call(
                                Spanned {
                                    node: Var(
                                        "get",
                                    ),
                                    span: 113..116,
                                },
                                [
                                    Spanned {
                                        node: Int(
                                            IntLit {
                                                value: 0,
                                                suffix: None,
                                            },
                                        ),
                                        span: 117..118,
                                    },
                                    Spanned {
                                        node: Call(
                                            Spanned {
                                                node: Var(
                                                    "Some",
                                                ),
                                                span: 120..124,
                                            },
                                            [
                                                Spanned {
                                                    node: Int(
                                                        IntLit {
                                                            value: 42,
                                                            suffix: None,
                                                        },
                                                    ),
                                                    span: 125..127,
                                                },
                                            ],
                                        ),
                                        span: 120..128,
                                    },
                                ],
                            ),
                            span: 113..129,
                        },
                    ],
                ),
                span: 105..130,
            },
            wheres: [],
            span: 93..130,
        },
    ],
}

== types ==
get : forall a. (a, Option(a)) -> a
main : () -> Unit ! {IO}

== core (cbpv) ==
fn get(d, o) =
  return o to t@0
  case t@0 of
    None =>
      return d
    Some(x) =>
      return x
fn main() =
  return 0 to t@1
  return 42 to t@2
  return Some(t@2) to t@3
  get(t@1, t@3) to t@4
  print t@4 to t@5
  print_nl

== fbip (rc) ==
fn get(d, o) =
  return o to t@0
  case t@0 of
    None =>
      return d
    Some(x) =>
      drop d
      dup x
      return x
fn main() =
  return 0 to t@1
  return 42 to t@2
  return Some(t@2) to t@3
  get(t@1, t@3) to %rc0
  drop t@3
  return %rc0 to t@4
  print t@4 to t@5
  drop t@5
  print_nl

== llvm ==
; ModuleID = 'prism'
source_filename = "prism"

@prism_native_kont_table = constant [796 x i8] c"scheme  prism-core-hash-v2\0Abundle  c1f5095f12f2aceef575ca27c01e6dc3846c4c29f6d9d61add13b25351c5f093\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:c1f5095f12f2aceef575ca27c01e6dc3846c4c29f6d9d61add13b25351c5f093\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Afn      prismfn_get  b9255037359b98ab790750679691acbf15d6592fcd7b2021c46822b4d541fa8a  get\0Afn      prismfn_main  3fdee20d319ea5152b2267863ec85070b7e397dc393ab4f11fccb54589a16722  main\0A\00", section ",.prism_kont", align 1
@prism_native_kont_state_map = constant [914 x i8] c"state-map 1\0Ascheme  prism-core-hash-v2\0Abundle  c1f5095f12f2aceef575ca27c01e6dc3846c4c29f6d9d61add13b25351c5f093\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:c1f5095f12f2aceef575ca27c01e6dc3846c4c29f6d9d61add13b25351c5f093\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Aslot-format prism-native-abi-word-v1\0Astate prismfn_get b9255037359b98ab790750679691acbf15d6592fcd7b2021c46822b4d541fa8a get arity 2 slots abi-word[arg0=%a0:word,arg1=%a1:word]\0Astate prismfn_main 3fdee20d319ea5152b2267863ec85070b7e397dc393ab4f11fccb54589a16722 main arity 0 slots abi-word[]\0A\00", section ",.prism_kont", align 1
@.kont_symbol1 = private constant [13 x i8] c"prismfn_main\00"
@.kont_hash1 = private constant [65 x i8] c"3fdee20d319ea5152b2267863ec85070b7e397dc393ab4f11fccb54589a16722\00"
@.kont_name1 = private constant [5 x i8] c"main\00"
@prism_native_kont_ptrs = constant [1 x { ptr, ptr, ptr, ptr }] [{ ptr, ptr, ptr, ptr } { ptr @prismfn_main, ptr @.kont_symbol1, ptr @.kont_hash1, ptr @.kont_name1 }], section ",.prism_kont", align 8
@prism_native_kont_ptrs_len = constant i64 1, section ",.prism_kont", align 8
@llvm.used = appending global [4 x ptr] [ptr @prism_native_kont_table, ptr @prism_native_kont_state_map, ptr @prism_native_kont_ptrs, ptr @prism_native_kont_ptrs_len], section ",llvm.metadata"

; Function Attrs: nounwind
define i64 @prismfn_main() #0 {
entry:
  call void @prism_print_int(i64 85)
  call void @prism_rc_dec(i64 85)
  call void @prism_rc_dec(i64 0)
  call void @prism_print_nl()
  ret i64 0
}

; Function Attrs: nounwind
declare void @prism_print_int(i64) #0

; Function Attrs: nounwind
declare void @prism_rc_dec(i64) #0

; Function Attrs: nounwind
declare void @prism_print_nl() #0

attributes #0 = { nounwind }

== run ==
output: [42]
result: ()
