tests/snapshots/snapshots__pipeline@or_null.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/or_null.pr
---
== tokens ==
VOpen Fn Ident("find") LParen Ident("hit") Colon KwBool RParen Colon UIdent("OrNull") LParen KwInt RParen Eq VOpen Match Ident("hit") Of VOpen True FatArrow UIdent("This") LParen Int(IntLit { value: 7, suffix: None }) RParen VSemi False FatArrow UIdent("Null") VClose VClose VSemi Fn Ident("unwrap_or") LParen Ident("o") Colon UIdent("OrNull") LParen KwInt RParen Comma Ident("d") Colon KwInt RParen Colon KwInt Eq VOpen Match Ident("o") Of VOpen UIdent("Null") FatArrow Ident("d") VSemi UIdent("This") LParen Ident("n") RParen FatArrow Ident("n") VClose VClose VSemi Fn Ident("main") LParen RParen Colon KwInt Eq Ident("unwrap_or") LParen Ident("find") LParen True RParen Comma Int(IntLit { value: 0, suffix: None }) RParen Plus Ident("unwrap_or") LParen Ident("find") LParen False RParen Comma Int(IntLit { value: 100, suffix: None }) RParen VClose

== ast ==
Program {
    types: [],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "find",
            params: [
                Param {
                    name: "hit",
                    ty: Some(
                        Bool,
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Con(
                    "OrNull",
                    [
                        Int,
                    ],
                ),
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Match(
                    Spanned {
                        node: Var(
                            "hit",
                        ),
                        span: 406..409,
                    },
                    [
                        Arm {
                            pat: Spanned {
                                node: Bool(
                                    true,
                                ),
                                span: 417..421,
                            },
                            body: Spanned {
                                node: Call(
                                    Spanned {
                                        node: Var(
                                            "This",
                                        ),
                                        span: 425..429,
                                    },
                                    [
                                        Spanned {
                                            node: Int(
                                                IntLit {
                                                    value: 7,
                                                    suffix: None,
                                                },
                                            ),
                                            span: 430..431,
                                        },
                                    ],
                                ),
                                span: 425..432,
                            },
                        },
                        Arm {
                            pat: Spanned {
                                node: Bool(
                                    false,
                                ),
                                span: 437..442,
                            },
                            body: Spanned {
                                node: Var(
                                    "Null",
                                ),
                                span: 446..450,
                            },
                        },
                    ],
                ),
                span: 400..450,
            },
            wheres: [],
            span: 362..450,
        },
        Decl {
            name: "unwrap_or",
            params: [
                Param {
                    name: "o",
                    ty: Some(
                        Con(
                            "OrNull",
                            [
                                Int,
                            ],
                        ),
                    ),
                    borrow: false,
                    default: None,
                },
                Param {
                    name: "d",
                    ty: Some(
                        Int,
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Match(
                    Spanned {
                        node: Var(
                            "o",
                        ),
                        span: 507..508,
                    },
                    [
                        Arm {
                            pat: Spanned {
                                node: Ctor(
                                    "Null",
                                    [],
                                ),
                                span: 516..520,
                            },
                            body: Spanned {
                                node: Var(
                                    "d",
                                ),
                                span: 524..525,
                            },
                        },
                        Arm {
                            pat: Spanned {
                                node: Ctor(
                                    "This",
                                    [
                                        Spanned {
                                            node: Var(
                                                "n",
                                            ),
                                            span: 535..536,
                                        },
                                    ],
                                ),
                                span: 530..537,
                            },
                            body: Spanned {
                                node: Var(
                                    "n",
                                ),
                                span: 541..542,
                            },
                        },
                    ],
                ),
                span: 501..542,
            },
            wheres: [],
            span: 452..542,
        },
        Decl {
            name: "main",
            params: [],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Bin(
                    Add,
                    Spanned {
                        node: Call(
                            Spanned {
                                node: Var(
                                    "unwrap_or",
                                ),
                                span: 562..571,
                            },
                            [
                                Spanned {
                                    node: Call(
                                        Spanned {
                                            node: Var(
                                                "find",
                                            ),
                                            span: 572..576,
                                        },
                                        [
                                            Spanned {
                                                node: Bool(
                                                    true,
                                                ),
                                                span: 577..581,
                                            },
                                        ],
                                    ),
                                    span: 572..582,
                                },
                                Spanned {
                                    node: Int(
                                        IntLit {
                                            value: 0,
                                            suffix: None,
                                        },
                                    ),
                                    span: 584..585,
                                },
                            ],
                        ),
                        span: 562..586,
                    },
                    Spanned {
                        node: Call(
                            Spanned {
                                node: Var(
                                    "unwrap_or",
                                ),
                                span: 589..598,
                            },
                            [
                                Spanned {
                                    node: Call(
                                        Spanned {
                                            node: Var(
                                                "find",
                                            ),
                                            span: 599..603,
                                        },
                                        [
                                            Spanned {
                                                node: Bool(
                                                    false,
                                                ),
                                                span: 604..609,
                                            },
                                        ],
                                    ),
                                    span: 599..610,
                                },
                                Spanned {
                                    node: Int(
                                        IntLit {
                                            value: 100,
                                            suffix: None,
                                        },
                                    ),
                                    span: 612..615,
                                },
                            ],
                        ),
                        span: 589..616,
                    },
                ),
                span: 562..616,
            },
            wheres: [],
            span: 544..616,
        },
    ],
}

== types ==
find : (Bool) -> OrNull(Int)
unwrap_or : (OrNull(Int), Int) -> Int
main : () -> Int

== core (cbpv) ==
fn find(hit) =
  return hit to t@0
  if t@0 then
    return 7 to t@1
    return This(t@1)
  else
    return Null
fn unwrap_or(o, d) =
  return o to t@2
  case t@2 of
    Null =>
      return d
    This(n) =>
      return n
fn main() =
  return true to t@3
  find(t@3) to t@4
  return 0 to t@5
  unwrap_or(t@4, t@5) to t@9
  return false to t@6
  find(t@6) to t@7
  return 100 to t@8
  unwrap_or(t@7, t@8) to t@10
  t@9 + t@10

== fbip (rc) ==
fn find(hit) =
  return hit to t@0
  if t@0 then
    return 7 to t@1
    return This(t@1)
  else
    return Null
fn unwrap_or(o, d) =
  return o to t@2
  case t@2 of
    Null =>
      return d
    This(n) =>
      drop d
      dup n
      return n
fn main() =
  return true to t@3
  find(t@3) to %rc0
  drop t@3
  return %rc0 to t@4
  return 0 to t@5
  unwrap_or(t@4, t@5) to %rc1
  drop t@4
  return %rc1 to t@9
  return false to t@6
  find(t@6) to %rc2
  drop t@6
  return %rc2 to t@7
  return 100 to t@8
  unwrap_or(t@7, t@8) to %rc3
  drop t@7
  return %rc3 to t@10
  t@9 + t@10

== llvm ==
; ModuleID = 'prism'
source_filename = "prism"

@prism_native_kont_table = constant [901 x i8] c"scheme  prism-core-hash-v2\0Abundle  db7eaba7e2e8c4c5970fcd0a6209656102eb7a8275aa50583bcf2d75ed42fe31\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:db7eaba7e2e8c4c5970fcd0a6209656102eb7a8275aa50583bcf2d75ed42fe31\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Afn      prismfn_find  fa17afdaed2825aa2fd6698e8c76a9e486fc2595908c9942a58a90fc30b47005  find\0Afn      prismfn_main  e9ce96b8cc0365fa6e337282b8e3b76b21fe029acc47396aad843d13ec3aba19  main\0Afn      prismfn_unwrap_or  97f5ccddd3f26be4de5022881b65e0019b7c1fed9f30a65eb5a79ccc09a31036  unwrap_or\0A\00", section ",.prism_kont", align 1
@prism_native_kont_state_map = constant [1053 x i8] c"state-map 1\0Ascheme  prism-core-hash-v2\0Abundle  db7eaba7e2e8c4c5970fcd0a6209656102eb7a8275aa50583bcf2d75ed42fe31\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:db7eaba7e2e8c4c5970fcd0a6209656102eb7a8275aa50583bcf2d75ed42fe31\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Aslot-format prism-native-abi-word-v1\0Astate prismfn_find fa17afdaed2825aa2fd6698e8c76a9e486fc2595908c9942a58a90fc30b47005 find arity 1 slots abi-word[arg0=%a0:word]\0Astate prismfn_main e9ce96b8cc0365fa6e337282b8e3b76b21fe029acc47396aad843d13ec3aba19 main arity 0 slots abi-word[]\0Astate prismfn_unwrap_or 97f5ccddd3f26be4de5022881b65e0019b7c1fed9f30a65eb5a79ccc09a31036 unwrap_or arity 2 slots abi-word[arg0=%a0:word,arg1=%a1:word]\0A\00", section ",.prism_kont", align 1
@.kont_symbol0 = private constant [13 x i8] c"prismfn_find\00"
@.kont_hash0 = private constant [65 x i8] c"fa17afdaed2825aa2fd6698e8c76a9e486fc2595908c9942a58a90fc30b47005\00"
@.kont_name0 = private constant [5 x i8] c"find\00"
@.kont_symbol1 = private constant [13 x i8] c"prismfn_main\00"
@.kont_hash1 = private constant [65 x i8] c"e9ce96b8cc0365fa6e337282b8e3b76b21fe029acc47396aad843d13ec3aba19\00"
@.kont_name1 = private constant [5 x i8] c"main\00"
@.kont_symbol2 = private constant [18 x i8] c"prismfn_unwrap_or\00"
@.kont_hash2 = private constant [65 x i8] c"97f5ccddd3f26be4de5022881b65e0019b7c1fed9f30a65eb5a79ccc09a31036\00"
@.kont_name2 = private constant [10 x i8] c"unwrap_or\00"
@prism_native_kont_ptrs = constant [3 x { ptr, ptr, ptr, ptr }] [{ ptr, ptr, ptr, ptr } { ptr @prismfn_find, ptr @.kont_symbol0, ptr @.kont_hash0, ptr @.kont_name0 }, { ptr, ptr, ptr, ptr } { ptr @prismfn_main, ptr @.kont_symbol1, ptr @.kont_hash1, ptr @.kont_name1 }, { ptr, ptr, ptr, ptr } { ptr @prismfn_unwrap_or, ptr @.kont_symbol2, ptr @.kont_hash2, ptr @.kont_name2 }], section ",.prism_kont", align 8
@prism_native_kont_ptrs_len = constant i64 3, section ",.prism_kont", align 8
@llvm.used = appending global [4 x ptr] [ptr @prism_native_kont_table, ptr @prism_native_kont_state_map, ptr @prism_native_kont_ptrs, ptr @prism_native_kont_ptrs_len], section ",llvm.metadata"

; Function Attrs: nounwind
define i64 @prismfn_find(i64 %a0) #0 {
entry:
  %t1 = icmp ne i64 %a0, 1
  br i1 %t1, label %b0, label %b1

b0:                                               ; preds = %entry
  ret i64 15

b1:                                               ; preds = %entry
  ret i64 0
}

; Function Attrs: nounwind
define i64 @prismfn_unwrap_or(i64 %a0, i64 %a1) #0 {
entry:
  %t0 = inttoptr i64 %a0 to ptr
  %t2 = icmp ne i64 %a0, 0
  %t3 = zext i1 %t2 to i64
  switch i64 %t3, label %b1 [
    i64 0, label %b2
    i64 1, label %b3
  ]

b2:                                               ; preds = %entry
  ret i64 %a1

b3:                                               ; preds = %entry
  call void @prism_rc_dec(i64 %a1)
  call void @prism_rc_inc(i64 %a0)
  ret i64 %a0

b1:                                               ; preds = %entry
  call void @prism_match_error()
  unreachable
}

; Function Attrs: nounwind
declare void @prism_match_error() #0

; Function Attrs: nounwind
declare void @prism_rc_dec(i64) #0

; Function Attrs: nounwind
declare void @prism_rc_inc(i64) #0

; Function Attrs: nounwind
define i64 @prismfn_main() #0 {
entry:
  %t1 = call i64 @prismfn_find(i64 3)
  %t3 = call i64 @prismfn_unwrap_or(i64 %t1, i64 1)
  call void @prism_rc_dec(i64 %t1)
  %t6 = call i64 @prismfn_find(i64 1)
  %t8 = call i64 @prismfn_unwrap_or(i64 %t6, i64 201)
  call void @prism_rc_dec(i64 %t6)
  %t10 = and i64 %t3, %t8
  %t12 = and i64 %t10, 1
  %t13 = icmp eq i64 %t12, 1
  br i1 %t13, label %b0, label %b1

b0:                                               ; preds = %entry
  %t15 = ashr i64 %t3, 1
  %t17 = ashr i64 %t8, 1
  %t18 = add i64 %t15, %t17
  %t20 = shl i64 %t18, 1
  %t21 = ashr i64 %t20, 1
  %t22 = icmp eq i64 %t21, %t18
  br i1 %t22, label %b3, label %b1

b1:                                               ; preds = %b0, %entry
  %t24 = call i64 @prism_rt_int_add(i64 %t3, i64 %t8)
  br label %b2

b3:                                               ; preds = %b0
  %t23 = or i64 %t20, 1
  br label %b2

b2:                                               ; preds = %b1, %b3
  %t25 = phi i64 [ %t23, %b3 ], [ %t24, %b1 ]
  call void @prism_rc_dec(i64 %t3)
  call void @prism_rc_dec(i64 %t8)
  ret i64 %t25
}

; Function Attrs: nounwind
declare i64 @prism_rt_int_add(i64, i64) #0

attributes #0 = { nounwind }

== run ==
output: []
result: 107
