tests/snapshots/snapshots__pipeline@param_eff_annot.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/param_eff_annot.pr
---
== tokens ==
VOpen Effect UIdent("Emit") LParen Ident("a") RParen VOpen Ident("emit") LParen Ident("a") RParen Colon KwUnit VClose VSemi Fn Ident("bad") LParen RParen Colon KwUnit Bang LBrace UIdent("Emit") LParen KwString RParen RBrace Eq Ident("emit") LParen Int(IntLit { value: 1, suffix: None }) RParen VSemi Fn Ident("main") LParen RParen Eq LParen RParen VClose

== ast ==
Program {
    types: [],
    effects: [
        EffectDecl {
            name: "Emit",
            params: [
                "a",
            ],
            ops: [
                EffOp {
                    name: "emit",
                    params: [
                        Var(
                            "a",
                        ),
                    ],
                    ret: Unit,
                    grade: Many,
                    span: 17..21,
                },
            ],
            span: 0..31,
        },
    ],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "bad",
            params: [],
            ret: Some(
                Unit,
            ),
            eff: Some(
                [
                    EffLabel {
                        name: "Emit",
                        args: [
                            Str,
                        ],
                    },
                ],
            ),
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "emit",
                        ),
                        span: 68..72,
                    },
                    [
                        Spanned {
                            node: Int(
                                IntLit {
                                    value: 1,
                                    suffix: None,
                                },
                            ),
                            span: 73..74,
                        },
                    ],
                ),
                span: 68..75,
            },
            wheres: [],
            span: 33..75,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Unit,
                span: 89..91,
            },
            wheres: [],
            span: 77..91,
        },
    ],
}

== types ==
[E1022] Type Error: in `bad`: type mismatch: expected String, got Int
   ╭─[ <source>:4:41 ]
   │
 4 │ fn bad() : Unit ! {Emit(String)} = emit(1)
   │                                         ┬  
   │                                         ╰── in `bad`: type mismatch: expected String, got Int
───╯
